# coupled-edit-propagation

./: .gitignore  LEADERBOARD.md  README.md  SANDBOX_MANIFEST.md  pyproject.toml
scripts/: capability_ladder.py  run_leaderboard.py  soundness_receipt.py
src/coupled_edit_env/: __init__.py  cli.py  environment.py  gold_solutions.py  partial_solutions.py  types.py  verifier.py
src/coupled_edit_env/adversarial/: __init__.py  cheats.py
src/coupled_edit_env/leaderboard/: __init__.py  adapters.py  runner.py
src/coupled_edit_env/tasks/: __init__.py  task_001_inventory.py  task_002_scheduler.py  task_003_pipeline.py  task_004_auth.py  task_005_calculator.py  task_006_event_bus.py  task_007_cache.py  task_008_formatter.py
tests/: test_correct_solutions.py  test_environment.py  test_verifier_soundness.py
